# zlog

./: .gitignore  CMakeLists.txt  INSTALL-WITH-CMAKE  build.bat  make  zlog.cbp
cb/: zlog-chk-conf.cbp  zlog.cbp
cmake/: FindGthread.cmake  FindUnixem.cmake  LoadLibraries.cmake  toolchain-ia64.cmake  toolchain-mingw64.cmake
cpack/: CMakeLists.txt  CPackConfig.cmake
cpack/zlog/: CMakeLists.txt
src/: CMakeLists.txt  conf.c  conf.h  event.c  event.h  fmacros.h  format.c  level.c  level_list.c  lockfile.c  lockfile.h  makefile  rotater.c  rotater.h  rule.c  spec.c  zc_hashtable.c  zc_profile.c  zc_util.c  zc_xplatform.h  zlog-chk-conf.c  zlog.c  zlog.h  zlog_win.c  zlog_win.h
test/: CMakeLists.txt
